# quillet

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  llm_runbook.md  pyproject.toml
.cursor/plans/: flask_newsletter_package_e8a6fd1a.plan.md  newsletter_config_table_e0410b6c.plan.md  test_email_send_0ab14a9c.plan.md
.cursor/rules/: project-rules.mdc  python.mdc
.github/workflows/: release.yml  test.yml
quillet/: __init__.py  _app.py  admin.py  auth.py  cli.py  factory.py  models.py  routes.py
quillet/db/: __init__.py  sqlalchemy.py  supabase_rest.py
quillet/email/: __init__.py  _utils.py  mailgun.py  noop.py  smtp.py
quillet/templates/quillet/: base.html  feed.xml  post_detail.html  post_list.html  subscribe_confirm.html
quillet/templates/quillet/admin/: dashboard.html  post_form.html  settings.html  subscribers.html
scripts/: docker_entrypoint_test.sh  docker_test.sh  http_smoke_test.py  install-hooks.sh  pre-commit  smoke_test.py
