[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quillet"
version = "0.5.2"
description = "Flask newsletter + microblog package. Importable Blueprint, standalone web app, or headless API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["flask", "newsletter", "microblog", "email"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.0",
    "markdown2>=2.4",
]

[project.optional-dependencies]
sqlalchemy = ["SQLAlchemy>=2.0"]
mailgun    = ["requests>=2.31"]
smtp       = []
supabase   = ["requests>=2.31"]
all        = ["SQLAlchemy>=2.0", "requests>=2.31"]
dev        = ["SQLAlchemy>=2.0", "requests>=2.31", "pytest>=8.0", "pytest-flask>=1.3", "ruff", "black"]

[project.urls]
Repository = "https://github.com/tinthe/quillet"

[tool.hatch.build.targets.wheel]
packages = ["quillet"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
